bin_PROGRAMS = serialize
serialize_SOURCES = main.c
serialize_CFLAGS = -w
serialize_LFLAGS = 
serialize_LDADD = libserialize.a ${GLIB_STATIC_LIB}

serializeincludedir = $(includedir)
serializeinclude_HEADERS = serialize.h

instdir = ${libdir}
inst_LIBRARIES = libserialize.a
lib_LTLIBRARIES =

libserialize_a_SOURCES = serialize.c
libserialize_a_CFLAGS = -w

